manifests/00-setup/envoy-ai-gateway-ratelimit-svc.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: envoy-ai-gateway-ratelimit
  namespace: envoy-gateway-system
spec:
  replicas: 1
  selector:
    matchLabels:
      app: envoy-ai-gateway-ratelimit
  template:
    metadata:
      labels:
        app: envoy-ai-gateway-ratelimit
    spec:
      containers:
        - name: ratelimit
          command:
            - /bin/ratelimit
          image: docker.io/envoyproxy/ratelimit:8fe6ea42
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 8081
              name: grpc
---
apiVersion: v1
kind: Service
metadata:
  name: envoy-ai-gateway-ratelimit
  namespace: envoy-gateway-system
  labels:
    app.kubernetes.io/name: envoy-ai-gateway-ratelimit
spec:
  ports:
  - name: grpc
    port: 8081
    protocol: TCP
    targetPort: 8081
  - name: metrics
    port: 19001
    protocol: TCP
    targetPort: 19001
  selector:
    app: envoy-ai-gateway-ratelimit
  type: ClusterIP
