manifests/00-setup/agent-router.yaml
---
# Source: ai-gateway-helm/templates/service.yaml
# Copyright Envoy AI Gateway Authors
# SPDX-License-Identifier: Apache-2.0
# The full text of the Apache license is available in the LICENSE file at
# the root of the repo.

apiVersion: v1
kind: Service
metadata:
  name: ai-gateway-controller
  namespace: default
  labels:
    helm.sh/chart: ai-gateway-helm-v1.1.0
    app.kubernetes.io/name: ai-gateway-helm
    app.kubernetes.io/instance: ai-gateway
    app.kubernetes.io/version: "v1.1.0"
    app.kubernetes.io/managed-by: Helm
spec:
  type: ClusterIP
  ports:
    - appProtocol: http
      name: mutating-webhook
      port: 9443
      protocol: TCP
      targetPort: 9443
    - appProtocol: grpc
      name: grpc
      port: 1063
      protocol: TCP
      targetPort: 1063
    - appProtocol: http
      name: http-metrics
      port: 8080
      protocol: TCP
      targetPort: 8080
    - appProtocol: grpc
      name: ratelimit-xds
      port: 18002
      protocol: TCP
      targetPort: 18002
  selector:
    app.kubernetes.io/name: ai-gateway-helm
    app.kubernetes.io/instance: ai-gateway
---
# Source: ai-gateway-helm/templates/deployment.yaml
# Copyright Envoy AI Gateway Authors
# SPDX-License-Identifier: Apache-2.0
# The full text of the Apache license is available in the LICENSE file at
# the root of the repo.

apiVersion: apps/v1
kind: Deployment
metadata:
  name: ai-gateway-controller
  namespace: default
  labels:
    helm.sh/chart: ai-gateway-helm-v1.1.0
    app.kubernetes.io/name: ai-gateway-helm
    app.kubernetes.io/instance: ai-gateway
    app.kubernetes.io/version: "v1.1.0"
    app.kubernetes.io/managed-by: Helm
spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/name: ai-gateway-helm
      app.kubernetes.io/instance: ai-gateway
  template:
    metadata:
      labels:
        app.kubernetes.io/name: ai-gateway-helm
        app.kubernetes.io/instance: ai-gateway
    spec:
      serviceAccountName: ai-gateway-controller
      hostNetwork: false
      securityContext:
        runAsGroup: 65532
        runAsNonRoot: true
        runAsUser: 65532
        seccompProfile:
          type: RuntimeDefault
      containers:
        - name: ai-gateway-helm
          securityContext:
            allowPrivilegeEscalation: false
            capabilities:
              drop:
              - ALL
            privileged: false
            runAsGroup: 65532
            runAsNonRoot: true
            runAsUser: 65532
            seccompProfile:
              type: RuntimeDefault
          image: "docker.io/envoyproxy/ai-gateway-controller:v1.1.0"
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 9443
            - containerPort: 1063
            - containerPort: 8080
            - containerPort: 18002
          args:
            - -logLevel=info
            - -logFormat=text
            - --extProcImage=docker.io/envoyproxy/ai-gateway-extproc:v1.1.0
            - --extProcImagePullPolicy=IfNotPresent
            - --extProcLogLevel=info
            - --extProcLogFormat=text
            - --envoyGatewayNamespace=envoy-gateway-system
            - "--endpointPrefixes=openai:,cohere:/cohere,anthropic:/anthropic"
            - --tlsCertDir=/certs
            - --tlsCertName=tls.crt
            - --tlsKeyName=tls.key
            - --webhookPort=9443
            - --enableLeaderElection=true
            - --rootPrefix=/
            - --cacheSyncTimeout=2m
            - --watchNamespaces=
            - --quotaRateLimitServiceAddr=envoy-ai-gateway-ratelimit.envoy-gateway-system
            - --quotaRateLimitTimeout=5
            - --quotaRateLimitFailureModeDeny=false
            - --mcpSessionEncryptionSeed=default-insecure-seed
            - --mcpSessionEncryptionIterations=100000
          livenessProbe:
            grpc:
              port: 1063
            initialDelaySeconds: 5
            periodSeconds: 2
          readinessProbe:
            grpc:
              port: 1063
            initialDelaySeconds: 5
            periodSeconds: 2
          resources:
            {}
          volumeMounts:
            - mountPath: /certs
              name: certs
              readOnly: true
      volumes:
        - name: certs
          secret:
            secretName: self-signed-cert-for-mutating-webhook
---
# Source: ai-gateway-helm/templates/envoy_gateway_cluster_role_for_inference_pool.yaml
# Copyright Envoy AI Gateway Authors
# SPDX-License-Identifier: Apache-2.0
# The full text of the Apache license is available in the LICENSE file at
# the root of the repo.

# This file contains the RBAC roles and role bindings for the Envoy Gateway
# so that it can read the InferencePool resources that are set in the HTTPRoutes
# generated by the AI Gateway.
---
# Source: ai-gateway-helm/templates/poddisruptionbudget.yaml
# Copyright Envoy AI Gateway Authors
# SPDX-License-Identifier: Apache-2.0
# The full text of the Apache license is available in the LICENSE file at
# the root of the repo.
---
# Source: ai-gateway-helm/templates/admission_webhook.yaml
# Copyright Envoy AI Gateway Authors
# SPDX-License-Identifier: Apache-2.0
# The full text of the Apache license is available in the LICENSE file at
# the root of the repo.

apiVersion: admissionregistration.k8s.io/v1
kind: MutatingWebhookConfiguration
metadata:
  name: envoy-ai-gateway-gateway-pod-mutator.default
webhooks:
  - name:  ai-gateway-controller.default.svc.cluster.local
    clientConfig:
      service:
        name:  ai-gateway-controller
        namespace: default
        port: 9443
        path: /mutate
    rules:
      - apiGroups: [""]
        apiVersions: ["v1"]
        operations: ["CREATE"]
        resources: ["pods"]
    objectSelector:
      matchLabels:
        app.kubernetes.io/managed-by: envoy-gateway
    sideEffects: None
    admissionReviewVersions: ["v1"]
    timeoutSeconds: 10
    failurePolicy: Fail
